--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
-    "react-particles": "^2.12.2",
     "react-scripts": "^5.0.1",
-    "react-switch": "^7.0.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0"
+    "react-switch": "^7.0.0"
   },
   "browserslist": {
     "production": [
