--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
-    "build": "react-scripts build"  
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "i18next": "^23.5.1",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-scripts": "^5.0.1",
@@ -30,5 +31,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    }
+  }
 }
