--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-switch": "^7.0.0"
   },
